kubernetes_deployment/live/operations-engineering-maintenance-pages-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-pages-service
  labels:
    app: maintenance-pages-service
spec:
  ports:
    - port: 4567
      name: http
      targetPort: 4567
  selector:
    app: maintenance-pages-app
